--- a/web/views/user/class.html
+++ b/web/views/user/class.html
@@ -212,7 +212,7 @@
                                     <td class="bg-primary text-white"><h5 class="text-white">Cardio</h5>John Deo</td>
                                     <td></td>
                                     <td><h5>Crossfit</h5>Adam Phillips</td>
-                                    <td></td> 
+                                    <td></td>
                                 </tr>
                                 <tr>
                                     <th class="bg-secondary text-white align-middle">5.00pm - 7.00pm</th>
@@ -272,7 +272,7 @@
                                     <td><h5>Cardio</h5>John Deo</td>
                                     <td></td>
                                     <td class="bg-primary text-white"><h5 class="text-white">Crossfit</h5>Adam Phillips</td>
-                                    <td></td> 
+                                    <td></td>
                                 </tr>
                                 <tr>
                                     <th class="bg-secondary text-white align-middle">5.00pm - 7.00pm</th>
@@ -332,7 +332,7 @@
                                     <td><h5>Cardio</h5>John Deo</td>
                                     <td></td>
                                     <td><h5>Crossfit</h5>Adam Phillips</td>
-                                    <td></td> 
+                                    <td></td>
                                 </tr>
                                 <tr>
                                     <th class="bg-secondary text-white align-middle">5.00pm - 7.00pm</th>
@@ -362,7 +362,7 @@
         </div>
     </div>
     <!-- Class Timetable End -->
-    
+
 
     <!-- BMI Calculation Start -->
     <div class="container-fluid position-relative bmi mt-5" style="margin-bottom: 90px;">
@@ -482,7 +482,7 @@
     <script src="mail/contact.js"></script>
 
     <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+    <script src="../../public/js/main.js"></script>
 </body>
 
 </html>
