--- a/web/views/user/contact.html
+++ b/web/views/user/contact.html
@@ -192,7 +192,7 @@
     <script src="mail/contact.js"></script>
 
     <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+    <script src="../../public/js/main.js"></script>
 </body>
 
 </html>
