--- a/web/views/user/blog.html
+++ b/web/views/user/blog.html
@@ -245,7 +245,7 @@
     <script src="mail/contact.js"></script>
 
     <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+    <script src="../../public/js/main.js"></script>
 </body>
 
 </html>
