update admin + views

--- a/web/views/admin/signin.ejs
+++ b/web/views/admin/signin.ejs
@@ -4,7 +4,7 @@
         <% if (error) { %>
             <div class="alert alert-danger"><%= error %></div>
         <% } %>
-        <form action="/admin/login" method="POST">
+        <form action="/admin/signin" method="POST">
             <div class="form-group">
                 <label for="username">Username</label>
                 <input type="text" class="form-control" id="username" name="username" required>
