--- a/web/public/scss/style.scss
+++ b/web/public/scss/style.scss
@@ -93,7 +93,7 @@ $enable-shadows: false;
     letter-spacing: 1px;
     color: $light;
   }
-  
+
   .navbar-dark .navbar-nav .nav-link:hover,
   .navbar-dark .navbar-nav .nav-link.active {
     color: $primary;
@@ -160,7 +160,7 @@ $enable-shadows: false;
       background: $secondary;
     }
 }
-  
+
 @media (min-width: 768px) {
     .bmi::after {
       position: absolute;
@@ -169,7 +169,7 @@ $enable-shadows: false;
       height: 100%;
       top: 0;
       left: 0;
-      background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url(../img/carousel-1.jpg);
+      background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url(../images/carousel-1.jpg);
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
@@ -205,7 +205,7 @@ $enable-shadows: false;
       background: $secondary;
     }
 }
-  
+
 @media (min-width: 768px) {
     .testimonial::after {
       position: absolute;
@@ -214,7 +214,7 @@ $enable-shadows: false;
       height: 100%;
       top: 0;
       right: 0;
-      background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url(../img/carousel-2.jpg);
+      background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url(../images/carousel-2.jpg);
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
@@ -255,7 +255,7 @@ $enable-shadows: false;
 .page-header,
 .subscribe,
 .footer {
-  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../img/bg.jpg);
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../images/bg.jpg);
   background-position: top;
   background-repeat: no-repeat;
   background-size: cover;
