--- a/web/views/layout/user_layout.ejs
+++ b/web/views/layout/user_layout.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Gymnast - Gym Website Template</title>
+    <title>CodeGym</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free Website Template" name="keywords">
     <meta content="Free Website Template" name="description">
@@ -26,25 +26,25 @@
 <div class="container-fluid p-0 nav-bar">
     <nav class="navbar navbar-expand-lg bg-none navbar-dark py-3">
         <a href="" class="navbar-brand">
-            <h1 class="m-0 display-4 font-weight-bold text-uppercase text-white">Gymnast</h1>
+            <h1 class="m-0 display-4 font-weight-bold text-uppercase text-white">CodeGym</h1>
         </a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
             <div class="navbar-nav ml-auto p-4 bg-secondary">
-                <a href="index.html" class="nav-item nav-link active">Home</a>
-                <a href="about.html" class="nav-item nav-link">About Us</a>
-                <a href="feature.html" class="nav-item nav-link">Our Features</a>
-                <a href="class.html" class="nav-item nav-link">Classes</a>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
-                    <div class="dropdown-menu text-capitalize">
-                        <a href="blog.html" class="dropdown-item">Blog Grid</a>
-                        <a href="single.html" class="dropdown-item">Blog Detail</a>
-                    </div>
-                </div>
-                <a href="contact.html" class="nav-item nav-link">Contact</a>
+                <a href="/home" class="nav-item nav-link <%= active.startsWith("/home") && "active" %>">Home</a>
+                <a href="/about" class="nav-item nav-link <%= active.startsWith("/about") && "active" %>">About Us</a>
+                <a href="/feature" class="nav-item nav-link <%= active.startsWith("/feature") && "active" %>">Our Features</a>
+                <a href="/class" class="nav-item nav-link <%= active.startsWith("/class") && "active" %>">Classes</a>
+                <!--                <div class="nav-item dropdown">-->
+                <!--                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>-->
+                <!--                    <div class="dropdown-menu text-capitalize">-->
+                <!--                        <a href="blog.ejs" class="dropdown-item">Blog Grid</a>-->
+                <!--                        <a href="single" class="dropdown-item">Blog Detail</a>-->
+                <!--                    </div>-->
+                <!--                </div>-->
+                <a href="/contact" class="nav-item nav-link <%= active.startsWith("/contact") && "active" %>">Contact</a>
             </div>
         </div>
     </nav>
@@ -75,9 +75,9 @@
         <div class="col-lg-3 col-md-6 mb-5">
             <h4 class="text-primary mb-4">Quick Links</h4>
             <div class="d-flex flex-column justify-content-start">
-                <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Home</a>
-                <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>About Us</a>
-                <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Features</a>
+                <a class="text-white mb-2" href="/"><i class="fa fa-angle-right mr-2"></i>Home</a>
+                <a class="text-white mb-2" href="/about"><i class="fa fa-angle-right mr-2"></i>About Us</a>
+                <a class="text-white mb-2" href="/feature"><i class="fa fa-angle-right mr-2"></i>Our Features</a>
                 <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Classes</a>
                 <a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
             </div>
@@ -121,8 +121,8 @@
 <script src="lib/waypoints/waypoints.min.js"></script>
 
 <!-- Contact Javascript File -->
-<script src="mail/jqBootstrapValidation.min.js"></script>
-<script src="mail/contact.js"></script>
+<!--<script src="mail/jqBootstrapValidation.min.js"></script>-->
+<!--<script src="mail/contact.js"></script>-->
 
 <!-- Template Javascript -->
 <script src="js/main.js"></script>
