--- a/web/views/user/home.ejs
+++ b/web/views/user/home.ejs
@@ -4,7 +4,7 @@
     <div id="blog-carousel" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="w-100" src="img/carousel-1.jpg" alt="Image">
+                <img class="w-100" src="images/carousel-1.jpg" alt="Image">
                 <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                     <h3 class="text-primary text-capitalize m-0">Gym & Fitness Center</h3>
                     <h2 class="display-2 m-0 mt-2 mt-md-4 text-white font-weight-bold text-capitalize">Best Gym In Town</h2>
@@ -12,7 +12,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="w-100" src="img/carousel-2.jpg" alt="Image">
+                <img class="w-100" src="images/carousel-2.jpg" alt="Image">
                 <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                     <h3 class="text-primary text-capitalize m-0">Gym & Fitness Center</h3>
                     <h2 class="display-2 m-0 mt-2 mt-md-4 text-white font-weight-bold text-capitalize">Get Body In Shape</h2>
@@ -130,8 +130,8 @@
 <!-- GYM Feature Start -->
 <div class="container feature pt-5">
     <div class="d-flex flex-column text-center mb-5">
-        <h4 class="text-primary font-weight-bold">Why Choose Us?</h4>
-        <h4 class="display-4 font-weight-bold">Benifits of Joining Our GYM</h4>
+        <h4 class="text-primary font-weight-bold">Lý do chọn chúng tôi?</h4>
+        <h4 class="display-4 font-weight-bold">Lợi ích khi gia nhập CodeGym</h4>
     </div>
     <div class="row">
         <div class="col-md-6 mb-5">
@@ -141,7 +141,7 @@
                     <i class="flaticon-barbell"></i>
                 </div>
                 <div class="col-sm-7">
-                    <h4 class="font-weight-bold">Videos Instruction</h4>
+                    <h4 class="font-weight-bold">Personal Training</h4>
                     <p>Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit invidunt, dolore tempor diam ipsum takima  erat tempor</p>
                 </div>
             </div>
@@ -153,8 +153,8 @@
                     <i class="flaticon-training"></i>
                 </div>
                 <div class="col-sm-7">
-                    <h4 class="font-weight-bold">Training Calendar</h4>
-                    <p>Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit invidunt, dolore tempor diam ipsum takima  erat tempor</p>
+                    <h4 class="font-weight-bold">Lịch tập luyện hiệu quả</h4>
+                    <p>Chúng tôi sẽ cung cấp lịch trình khoa học</p>
                 </div>
             </div>
         </div>
@@ -203,272 +203,7 @@
 <!-- Subscribe End -->
 
 
-<!-- Class Timetable Start -->
-<div class="container gym-feature py-5">
-    <div class="d-flex flex-column text-center mb-5">
-        <h4 class="text-primary font-weight-bold">Class Timetable</h4>
-        <h4 class="display-4 font-weight-bold">Working Hours and Class Time</h4>
-    </div>
-    <div class="tab-class">
-        <ul class="nav nav-pills justify-content-center mb-4">
-            <li class="nav-item">
-                <a class="nav-link active" data-toggle="pill" href="#class-all">All Classes</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" data-toggle="pill" href="#class-cardio">Cardio</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" data-toggle="pill" href="#class-crossfit">Crossfit</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" data-toggle="pill" href="#class-powerlifting">Powerlifting</a>
-            </li>
-        </ul>
-        <div class="tab-content">
-            <div id="class-all" class="container tab-pane p-0 active">
-                <div class="table-responsive">
-                    <table class="table table-bordered table-lg m-0">
-                        <thead class="bg-secondary text-white text-center">
-                        <tr>
-                            <th>Time</th>
-                            <th>Monday</th>
-                            <th>Tuesday</th>
-                            <th>Wednesday</th>
-                            <th>Thursday</th>
-                            <th>Friday</th>
-                            <th>Saturday</th>
-                            <th>Sunday</th>
-                        </tr>
-                        </thead>
-                        <tbody class="text-center">
-                        <tr>
-                            <th class="bg-secondary text-white align-middle">6.00am - 8.00am</th>
-                            <td><h5>Cardio</h5>John Deo</td>
-                            <td></td>
-                            <td><h5>Crossfit</h5>Adam Phillips</td>
-                            <td></td>
-                            <td><h5>Power Lifting</h5>James Alien</td>
-                            <td></td>
-                            <td><h5>Cardio</h5>John Deo</td>
-                        </tr>
-                        <tr>
-                            <th class="bg-secondary text-white align-middle">10.00am - 12.00am</th>
-                            <td></td>
-                            <td><h5>Power Lifting</h5>James Alien</td>
-                            <td></td>
-                            <td><h5>Cardio</h5>John Deo</td>
-                            <td></td>
-                            <td><h5>Crossfit</h5>Adam Phillips</td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <th class="bg-secondary text-white align-middle">5.00pm - 7.00pm</th>
-                            <td><h5>Crossfit</h5>Adam Phillips</td>
-                            <td></td>
-                            <td><h5>Power Lifting</h5>James Alien</td>
-                            <td></td>
-                            <td><h5>Cardio</h5>John Deo</td>
-                            <td></td>
-                            <td><h5>Crossfit</h5>Adam Phillips</td>
-                        </tr>
-                        <tr>
-                            <th class="bg-secondary text-white align-middle">7.00pm - 9.00pm</th>
-                            <td></td>
-                            <td><h5>Cardio</h5>John Deo</td>
-                            <td></td>
-                            <td><h5>Crossfit</h5>Adam Phillips</td>
-                            <td></td>
-                            <td><h5>Power Lifting</h5>James Alien</td>
-                            <td></td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-            <div id="class-cardio" class="container tab-pane fade p-0">
-                <div class="table-responsive">
-                    <table class="table table-bordered table-lg m-0">
-                        <thead class="bg-secondary text-white text-center">
-                        <tr>
-                            <th>Time</th>
-                            <th>Monday</th>
-                            <th>Tuesday</th>
-                            <th>Wednesday</th>
-                            <th>Thursday</th>
-                            <th>Friday</th>
-                            <th>Saturday</th>
-                            <th>Sunday</th>
-                        </tr>
-                        </thead>
-                        <tbody class="text-center">
-                        <tr>
-                            <th class="bg-secondary text-white align-middle">6.00am - 8.00am</th>
-                            <td class="bg-primary text-white"><h5 class="text-white">Cardio</h5>John Deo</td>
-                            <td></td>
-                            <td><h5>Crossfit</h5>Adam Phillips</td>
-                            <td></td>
-                            <td><h5>Power Lifting</h5>James Alien</td>
-                            <td></td>
-                            <td class="bg-primary text-white"><h5 class="text-white">Cardio</h5>John Deo</td>
-                        </tr>
-                        <tr>
-                            <th class="bg-secondary text-white align-middle">10.00am - 12.00am</th>
-                            <td></td>
-                            <td><h5>Power Lifting</h5>James Alien</td>
-                            <td></td>
-                            <td class="bg-primary text-white"><h5 class="text-white">Cardio</h5>John Deo</td>
-                            <td></td>
-                            <td><h5>Crossfit</h5>Adam Phillips</td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <th class="bg-secondary text-white align-middle">5.00pm - 7.00pm</th>
-                            <td><h5>Crossfit</h5>Adam Phillips</td>
-                            <td></td>
-                            <td><h5>Power Lifting</h5>James Alien</td>
-                            <td></td>
-                            <td class="bg-primary text-white"><h5 class="text-white">Cardio</h5>John Deo</td>
-                            <td></td>
-                            <td><h5>Crossfit</h5>Adam Phillips</td>
-                        </tr>
-                        <tr>
-                            <th class="bg-secondary text-white align-middle">7.00pm - 9.00pm</th>
-                            <td></td>
-                            <td class="bg-primary text-white"><h5 class="text-white">Cardio</h5>John Deo</td>
-                            <td></td>
-                            <td><h5>Crossfit</h5>Adam Phillips</td>
-                            <td></td>
-                            <td><h5>Power Lifting</h5>James Alien</td>
-                            <td></td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-            <div id="class-crossfit" class="container tab-pane fade p-0">
-                <div class="table-responsive">
-                    <table class="table table-bordered table-lg m-0">
-                        <thead class="bg-secondary text-white text-center">
-                        <tr>
-                            <th>Time</th>
-                            <th>Monday</th>
-                            <th>Tuesday</th>
-                            <th>Wednesday</th>
-                            <th>Thursday</th>
-                            <th>Friday</th>
-                            <th>Saturday</th>
-                            <th>Sunday</th>
-                        </tr>
-                        </thead>
-                        <tbody class="text-center">
-                        <tr>
-                            <th class="bg-secondary text-white align-middle">6.00am - 8.00am</th>
-                            <td><h5>Cardio</h5>John Deo</td>
-                            <td></td>
-                            <td class="bg-primary text-white"><h5 class="text-white">Crossfit</h5>Adam Phillips</td>
-                            <td></td>
-                            <td><h5>Power Lifting</h5>James Alien</td>
-                            <td></td>
-                            <td><h5>Cardio</h5>John Deo</td>
-                        </tr>
-                        <tr>
-                            <th class="bg-secondary text-white align-middle">10.00am - 12.00am</th>
-                            <td></td>
-                            <td><h5>Power Lifting</h5>James Alien</td>
-                            <td></td>
-                            <td><h5>Cardio</h5>John Deo</td>
-                            <td></td>
-                            <td class="bg-primary text-white"><h5 class="text-white">Crossfit</h5>Adam Phillips</td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <th class="bg-secondary text-white align-middle">5.00pm - 7.00pm</th>
-                            <td class="bg-primary text-white"><h5 class="text-white">Crossfit</h5>Adam Phillips</td>
-                            <td></td>
-                            <td><h5>Power Lifting</h5>James Alien</td>
-                            <td></td>
-                            <td><h5>Cardio</h5>John Deo</td>
-                            <td></td>
-                            <td class="bg-primary text-white"><h5 class="text-white">Crossfit</h5>Adam Phillips</td>
-                        </tr>
-                        <tr>
-                            <th class="bg-secondary text-white align-middle">7.00pm - 9.00pm</th>
-                            <td></td>
-                            <td><h5>Cardio</h5>John Deo</td>
-                            <td></td>
-                            <td class="bg-primary text-white"><h5 class="text-white">Crossfit</h5>Adam Phillips</td>
-                            <td></td>
-                            <td><h5>Power Lifting</h5>James Alien</td>
-                            <td></td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-            <div id="class-powerlifting" class="container tab-pane fade p-0">
-                <div class="table-responsive">
-                    <table class="table table-bordered table-lg m-0">
-                        <thead class="bg-secondary text-white text-center">
-                        <tr>
-                            <th>Time</th>
-                            <th>Monday</th>
-                            <th>Tuesday</th>
-                            <th>Wednesday</th>
-                            <th>Thursday</th>
-                            <th>Friday</th>
-                            <th>Saturday</th>
-                            <th>Sunday</th>
-                        </tr>
-                        </thead>
-                        <tbody class="text-center">
-                        <tr>
-                            <th class="bg-secondary text-white align-middle">6.00am - 8.00am</th>
-                            <td><h5>Cardio</h5>John Deo</td>
-                            <td></td>
-                            <td><h5>Crossfit</h5>Adam Phillips</td>
-                            <td></td>
-                            <td class="bg-primary text-white"><h5 class="text-white">Power Lifting</h5>James Alien</td>
-                            <td></td>
-                            <td><h5>Cardio</h5>John Deo</td>
-                        </tr>
-                        <tr>
-                            <th class="bg-secondary text-white align-middle">10.00am - 12.00am</th>
-                            <td></td>
-                            <td class="bg-primary text-white"><h5 class="text-white">Power Lifting</h5>James Alien</td>
-                            <td></td>
-                            <td><h5>Cardio</h5>John Deo</td>
-                            <td></td>
-                            <td><h5>Crossfit</h5>Adam Phillips</td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <th class="bg-secondary text-white align-middle">5.00pm - 7.00pm</th>
-                            <td><h5>Crossfit</h5>Adam Phillips</td>
-                            <td></td>
-                            <td class="bg-primary text-white"><h5 class="text-white">Power Lifting</h5>James Alien</td>
-                            <td></td>
-                            <td><h5>Cardio</h5>John Deo</td>
-                            <td></td>
-                            <td><h5>Crossfit</h5>Adam Phillips</td>
-                        </tr>
-                        <tr>
-                            <th class="bg-secondary text-white align-middle">7.00pm - 9.00pm</th>
-                            <td></td>
-                            <td><h5>Cardio</h5>John Deo</td>
-                            <td></td>
-                            <td><h5>Crossfit</h5>Adam Phillips</td>
-                            <td></td>
-                            <td class="bg-primary text-white"><h5 class="text-white">Power Lifting</h5>James Alien</td>
-                            <td></td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Class Timetable End -->
+<%- include('time_table') %>
 
 
 <!-- BMI Calculation Start -->
