code before merge master

--- a/web/views/layout/main_layout.ejs
+++ b/web/views/layout/main_layout.ejs
@@ -49,5 +49,6 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+    <script src="js/admin_main.js"></script>
 </body>
 </html>
