--- a/web/views/user/feature.ejs
+++ b/web/views/user/feature.ejs
@@ -1,3 +1,5 @@
+<%- include('page_header',{title:'Our Features'}) %>
+
 <!-- GYM Feature Start -->
 <div class="container feature pt-5">
     <div class="d-flex flex-column text-center mb-5">
@@ -13,7 +15,8 @@
                 </div>
                 <div class="col-sm-7">
                     <h4 class="font-weight-bold">Videos Instruction</h4>
-                    <p>Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit invidunt, dolore tempor diam ipsum takima  erat tempor</p>
+                    <p>Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit
+                        invidunt, dolore tempor diam ipsum takima erat tempor</p>
                 </div>
             </div>
         </div>
@@ -25,7 +28,8 @@
                 </div>
                 <div class="col-sm-7">
                     <h4 class="font-weight-bold">Training Calendar</h4>
-                    <p>Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit invidunt, dolore tempor diam ipsum takima  erat tempor</p>
+                    <p>Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit
+                        invidunt, dolore tempor diam ipsum takima erat tempor</p>
                 </div>
             </div>
         </div>
@@ -37,7 +41,8 @@
                 </div>
                 <div class="col-sm-7">
                     <h4 class="font-weight-bold">Free Apps & WiFi</h4>
-                    <p>Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit invidunt, dolore tempor diam ipsum takima  erat tempor</p>
+                    <p>Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit
+                        invidunt, dolore tempor diam ipsum takima erat tempor</p>
                 </div>
             </div>
         </div>
@@ -49,7 +54,8 @@
                 </div>
                 <div class="col-sm-7">
                     <h4 class="font-weight-bold">Community Support</h4>
-                    <p>Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit invidunt, dolore tempor diam ipsum takima  erat tempor</p>
+                    <p>Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit
+                        invidunt, dolore tempor diam ipsum takima erat tempor</p>
                 </div>
             </div>
         </div>
@@ -73,7 +79,8 @@
                         <div class="carousel-inner" role="listbox">
                             <div class="carousel-item active">
                                 <div class="d-flex align-items-center mb-4 text-white">
-                                    <img width="80" height="80" class="rounded-circle bg-dark p-2" src="images/testimonial-1.jpg"
+                                    <img width="80" height="80" class="rounded-circle bg-dark p-2"
+                                         src="images/testimonial-1.jpg"
                                          alt="Image">
                                     <div class="pl-4">
                                         <h4 class="text-primary">Client Name</h4>
@@ -87,7 +94,8 @@
                             </div>
                             <div class="carousel-item">
                                 <div class="d-flex align-items-center mb-4 text-white">
-                                    <img width="80" height="80" class="rounded-circle bg-dark p-2" src="images/testimonial-2.jpg"
+                                    <img width="80" height="80" class="rounded-circle bg-dark p-2"
+                                         src="images/testimonial-2.jpg"
                                          alt="Image">
                                     <div class="pl-4">
                                         <h4 class="text-primary">Client Name</h4>
@@ -101,7 +109,8 @@
                             </div>
                             <div class="carousel-item">
                                 <div class="d-flex align-items-center mb-4 text-white">
-                                    <img width="80" height="80" class="rounded-circle bg-dark p-2" src="images/testimonial-3.jpg"
+                                    <img width="80" height="80" class="rounded-circle bg-dark p-2"
+                                         src="images/testimonial-3.jpg"
                                          alt="Image">
                                     <div class="pl-4">
                                         <h4 class="text-primary">Client Name</h4>
