--- a/web/views/user/single.ejs
+++ b/web/views/user/single.ejs
@@ -36,7 +36,7 @@
                     <a href="index.html" class="nav-item nav-link">Home</a>
                     <a href="about.ejs" class="nav-item nav-link">About Us</a>
                     <a href="feature.ejs" class="nav-item nav-link">Our Features</a>
-                    <a href="class.ejs" class="nav-item nav-link">Classes</a>
+                    <a href="branch.ejs" class="nav-item nav-link">Classes</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle active" data-toggle="dropdown">Pages</a>
                         <div class="dropdown-menu text-capitalize">
