--- a/web/views/admin/home_page.ejs
+++ b/web/views/admin/home_page.ejs
@@ -36,6 +36,7 @@
                 </div> -->
                 <a href="widget.html" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Học viên</a>
                 <a href="widget.html" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Báo cáo</a>
+                <a href="widget.html" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Gói tập</a>
                 <!-- <a href="widget.html" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Widgets</a> -->
                 <!-- <a href="form.html" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Forms</a>
                 <a href="table.html" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Tables</a>
@@ -134,11 +135,7 @@
                 </div> -->
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
-<<<<<<< HEAD
-                        <img class="rounded-circle me-lg-2" src="images/team-2.jpg" alt="" style="width: 40px; height: 40px;">
-=======
                         <img class="rounded-circle me-lg-2" src="images/user.jpg" alt="" style="width: 40px; height: 40px;">
->>>>>>> 58078e23b94ad00490659952add0b5a311a6dafb
                         <span class="d-none d-lg-inline-flex">John Doe</span>
                     </a>
                     <div class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0">
@@ -155,14 +152,49 @@
         <!-- 404 Start -->
         <div class="container-fluid pt-4 px-4">
             <div class="row vh-100 bg-light rounded align-items-center justify-content-center mx-0">
-                <div class="col-md-6 text-center p-4">
+                         <div class="bg-light rounded h-100 p-4"> 
+                            <h6 class="mb-4">Danh sách chi nhánh</h6> 
+                            <button type="submit" class="btn btn-primary">Thêm mới</button> 
+                            <table class="table" style="margin-top: 20px;">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">#</th>
+                                        <th scope="col">Tên chi nhánh</th>
+                                        <th scope="col">Địa chỉ</th>
+                                        <th scope="col">Action</th>
+                                        
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <% if (branches) { %>
+                                        <% branches.forEach(branch => { %>
+                                            <tr>
+                                                <th scope="row"><%= branch.id %></th>
+                                                <td><%= branch.name %></td>
+                                                <td><%= branch.address %></td>
+                                                <td>
+                                                    <button type="button" class="btn btn-primary">Sửa</button>
+                                                    <button type="button" class="btn btn-primary-update">Xoá</button>
+                                                </td>
+                                            </tr>
+                                        <% }); %>
+                                    <% } else { %>
+                                        <tr>
+                                            <td colspan="4">Không có dữ liệu để hiển thị.</td>
+                                        </tr>
+                                    <% } %>
+                                    
+                                </tbody>
+                            </table>
+                        </div>
+                <!-- <div class="col-md-6 text-center p-4">
                     <i class="bi bi-exclamation-triangle display-1 text-primary"></i>
                     <h1 class="display-1 fw-bold">404</h1>
                     <h1 class="mb-4">Page Not Found</h1>
                     <p class="mb-4">We’re sorry, the page you have looked for does not exist in our website!
                         Maybe go to our home page or try to use a search?</p>
                     <a class="btn btn-primary rounded-pill py-3 px-5" href="">Go Back To Home</a>
-                </div>
+                </div> -->
             </div>
         </div>
         <!-- 404 End -->
@@ -175,7 +207,7 @@
                     <div class="col-12 col-sm-6 text-center text-sm-start">
                         &copy; <a href="#">Your Site Name</a>, All Right Reserved.
                     </div>
-                    <div class="col-12 col-sm-6 text-center text-sm-end">
+                    <div class="col-12 col-sm-6 text-center text-sm-end"> 
                         <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
                         Designed By <a href="https://htmlcodex.com">HTML Codex</a>
                     </div>
